samples/_failures_safe/1761287214_506404_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8734feaf.c: In function ‘main’:
./samples/SAFE/__tmp_8734feaf.c:179:12: error: missing terminating " character
  179 |     printf("
      |            ^
./samples/SAFE/__tmp_8734feaf.c:179:5: error: expected expression at end of input
  179 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_8734feaf.c:179:5: error: expected declaration or statement at end of input
